Fix spacing

--- a/docs/_sass/index.sass
+++ b/docs/_sass/index.sass
@@ -145,6 +145,12 @@
     &:hover
       opacity: 1
 
+.intro-partners
+  margin-top: 6rem
+
+.intro-carbon
+  margin-top: 0.5rem
+
 +mobile
   .intro-buttons
     .button
@@ -162,29 +168,20 @@
     justify-content: space-between
 
 +touch
-  .intro-column.is-video,
-  .intro-column.is-carbon
+  .intro-column.is-video
     margin-top: 3rem
-  .intro-columns.is-partners
-    margin-top: 6rem
 
 +desktop
   .intro-columns
     display: flex
     justify-content: center
-    &.is-partners
-      align-items: center
-      margin-top: 3rem
   .intro-column
     width: calc(50% - 1.5rem)
-    &.is-content,
-    &.is-sponsor
+    &.is-content
       margin-right: 1.5rem
-    &.is-video,
-    &.is-carbon
+    &.is-video
       margin-left: 1.5rem
-  .intro-content,
-  .bd-sponsor
+  .intro-content
     max-width: 440px
   .intro-title
     margin-top: -11px
