--- a/docs/_sass/sponsors.sass
+++ b/docs/_sass/sponsors.sass
@@ -27,6 +27,9 @@
     align-items: center
     display: flex
     justify-content: center
-    margin: 0 10px 20px
-    width: 200px
+    margin: 1rem
+    width: 160px
+    img
+      max-height: 60px
+      width: auto
 
