--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -11351,6 +11351,14 @@ svg {
   opacity: 1;
 }
 
+.intro-partners {
+  margin-top: 6rem;
+}
+
+.intro-carbon {
+  margin-top: 0.5rem;
+}
+
 @media screen and (max-width: 768px) {
   .intro-buttons .button {
     display: -webkit-box;
@@ -11381,12 +11389,8 @@ svg {
 }
 
 @media screen and (max-width: 1023px) {
-  .intro-column.is-video,
-  .intro-column.is-carbon {
+  .intro-column.is-video {
     margin-top: 3rem;
-  }
-  .intro-columns.is-partners {
-    margin-top: 6rem;
   }
 }
 
@@ -11399,23 +11403,16 @@ svg {
         -ms-flex-pack: center;
             justify-content: center;
   }
-  .intro-columns.is-partners {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    margin-top: 3rem;
-  }
   .intro-column {
     width: calc(50% - 1.5rem);
   }
-  .intro-column.is-content, .intro-column.is-sponsor {
+  .intro-column.is-content {
     margin-right: 1.5rem;
   }
-  .intro-column.is-video, .intro-column.is-carbon {
+  .intro-column.is-video {
     margin-left: 1.5rem;
   }
-  .intro-content,
-  .bd-sponsor {
+  .intro-content {
     max-width: 440px;
   }
   .intro-title {
@@ -13488,8 +13485,13 @@ html.route-index .hero.is-primary a.column:hover .title strong {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin: 0 10px 20px;
-  width: 200px;
+  margin: 1rem;
+  width: 160px;
+}
+
+.bd-sponsor-list a img {
+  max-height: 60px;
+  width: auto;
 }
 
 @-webkit-keyframes fadeIn {
